tests/algorithms/x/Scala/data_compression/huffman.scala
// Generated by Mochi v0.10.59 on 2025-08-06 22:31:22 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
import scala.math.BigInt
import scala.collection.immutable.ListMap
import scala.util.control.Breaks
import scala.util.control.Breaks._
object Main {
  private var _nowSeed: Long = 0L
  private var _nowSeeded: Boolean = false
  private def _now(): Int = {
    if (!_nowSeeded) {
      sys.env.get("MOCHI_NOW_SEED").foreach { s =>
      try { _nowSeed = s.toInt; _nowSeeded = true } catch { case _ : NumberFormatException => () }
    }
  }
  if (_nowSeeded) {
    _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
    _nowSeed.toInt
  } else {
    Math.abs((System.nanoTime() / 1000).toInt)
  }
}

def toJson(value: Any, indent: Int = 0): String = value match {
  case m: scala.collection.Map[_, _] =>
  val items = ListMap(m.toSeq.sortBy(_._1.toString): _*).toSeq.map{ case (k,v) => "  "*(indent+1)+"\""+k.toString+"\": "+toJson(v, indent+1) }
  "{\n"+items.mkString(",\n")+"\n"+"  "*indent+"}"
  case s: Seq[_] =>
  val items = s.map(x => "  "*(indent+1)+toJson(x, indent+1))
  "[\n"+items.mkString(",\n")+"\n"+"  "*indent+"]"
  case s: String => "\""+s+"\""
  case other => other.toString
}

sealed trait Huffman
case class Leaf(var symbol: String, var freq: BigInt) extends Huffman
case class Node(var freq: BigInt, var left: Any, var right: Any) extends Huffman


def get_freq(n: Huffman): BigInt = {
  return BigInt((n match { case Leaf(_, f) => f case Node(f, _, _) => f }).toString.toDouble.toInt)
}

def sort_nodes(nodes: ArrayBuffer[Huffman]): ArrayBuffer[Huffman] = {
  var arr: ArrayBuffer[Huffman] = nodes
  var i: BigInt = 1
  while (i < BigInt((arr).size)) {
    val key: Huffman = arr((i.toInt).toInt)
    var j: BigInt = i - 1
    while (j >= 0 && get_freq(arr((j.toInt).toInt)) > get_freq(key)) {
      arr((j + 1).toInt) = arr((j.toInt).toInt)
      j = j - 1
    }
    arr((j + 1).toInt) = key
    i = i + 1
  }
  return arr
}

def rest(nodes: ArrayBuffer[Huffman]): ArrayBuffer[Huffman] = {
  var res: ArrayBuffer[Huffman] = ArrayBuffer()
  var i: BigInt = 1
  while (i < BigInt((nodes).size)) {
    res = res :+ nodes((i.toInt).toInt)
    i = i + 1
  }
  return res
}

def count_freq(text: String): ArrayBuffer[Huffman] = {
  var chars: ArrayBuffer[String] = ArrayBuffer()
  var freqs: ArrayBuffer[BigInt] = ArrayBuffer()
  var i: BigInt = 0
  val _br3 = new Breaks
  _br3.breakable {
    while (i < BigInt((text).size)) {
      val c: String = text.slice((i).toInt, (i + 1).toInt)
      var j: BigInt = 0
      var found: Boolean = false
      val _br4 = new Breaks
      _br4.breakable {
        while (j < BigInt((chars).size)) {
          if (chars((j.toInt).toInt) == c) {
            freqs((j).toInt) = freqs((j.toInt).toInt) + 1
            found = true
            _br4.break()
          }
          j = j + 1
        }
      }
      if (!found) {
        chars = chars :+ c
        freqs = freqs :+ BigInt(1)
      }
      i = i + 1
    }
  }
  var leaves: ArrayBuffer[Huffman] = ArrayBuffer()
  var k: BigInt = 0
  while (k < BigInt((chars).size)) {
    leaves = leaves :+ (Leaf(chars((k.toInt).toInt), freqs((k.toInt).toInt))).asInstanceOf[Huffman]
    k = k + 1
  }
  return (sort_nodes(leaves)).asInstanceOf[ArrayBuffer[Huffman]]
}

def build_tree(nodes: ArrayBuffer[Huffman]): Huffman = {
  var arr: ArrayBuffer[Any] = nodes
  while (BigInt((arr).size) > 1) {
    val left: Huffman = arr((0.toInt).toInt)
    arr = rest(arr)
    val right: Any = arr((0.toInt).toInt)
    arr = rest(arr.asInstanceOf[ArrayBuffer[Huffman]])
    val node: Node = Node(get_freq(left) + get_freq(right.asInstanceOf[Huffman]), left, right)
    arr = arr :+ node.asInstanceOf[Any]
    arr = sort_nodes(arr.asInstanceOf[ArrayBuffer[Huffman]])
  }
  return (arr((0.toInt).toInt)).asInstanceOf[Huffman]
}

def concat_pairs(a: ArrayBuffer[ArrayBuffer[String]], b: ArrayBuffer[ArrayBuffer[String]]): ArrayBuffer[ArrayBuffer[String]] = {
  var res: ArrayBuffer[ArrayBuffer[String]] = a
  var i: BigInt = 0
  while (i < BigInt((b).size)) {
    res = res :+ b((i.toInt).toInt)
    i = i + 1
  }
  return res
}

def collect_codes(tree: Huffman, prefix: String): ArrayBuffer[ArrayBuffer[String]] = {
  return (tree match { case Leaf(s, _) => ArrayBuffer(ArrayBuffer(s, prefix)) case Node(_, l, r) => concat_pairs(collect_codes(l.asInstanceOf[Huffman], prefix + "0"), collect_codes(r.asInstanceOf[Huffman], prefix + "1")) }).asInstanceOf[ArrayBuffer[ArrayBuffer[String]]]
}

def find_code(pairs: ArrayBuffer[ArrayBuffer[String]], ch: String): String = {
  var i: BigInt = 0
  while (i < BigInt((pairs).size)) {
    if (pairs((i.toInt).toInt)((0.toInt).toInt) == ch) {
      return pairs((i.toInt).toInt)((1.toInt).toInt)
    }
    i = i + 1
  }
  return ""
}

def huffman_encode(text: String): String = {
  if (text == "") {
    return ""
  }
  val leaves: ArrayBuffer[Any] = count_freq(text)
  val tree: Any = build_tree(leaves.asInstanceOf[ArrayBuffer[Huffman]])
  val codes: ArrayBuffer[ArrayBuffer[String]] = collect_codes(tree.asInstanceOf[Huffman], "")
  var encoded: String = ""
  var i: BigInt = 0
  while (i < BigInt((text).size)) {
    val c: String = text.slice((i).toInt, (i + 1).toInt)
    encoded = encoded + find_code(codes, c) + " "
    i = i + 1
  }
  return encoded
}

def main(args: Array[String]): Unit = {
  {
    System.gc()
    val _startMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _start = _now()
    println(huffman_encode("beep boop beer!"))
    val _end = _now()
    System.gc()
    val _endMem = Runtime.getRuntime.totalMemory() - Runtime.getRuntime.freeMemory()
    val _durUs = (_end - _start) / 1000
    var _memDiff = _endMem - _startMem
    if (_memDiff <= 0) _memDiff = _endMem
    println(toJson(scala.collection.immutable.Map("duration_us" -> _durUs, "memory_bytes" -> _memDiff, "name" -> "main")))
  }
}
}
